# rl_ros2_navigation

./: README.md  puppet.ino
puppet/: package.xml  setup.cfg  setup.py
puppet/launch/: depth_to_laserscan.launch.py  robot.launch.py
puppet/meshes/: base_link.part  base_link.stl  board.part  board.stl  camera.part  camera.stl  edge.part  edge.stl  laser_frame.part  laser_frame.stl  lidar_holder.part  lidar_holder.stl  motor_holder.part  motor_holder.stl  orin_cover.part  orin_cover.stl  orin_floor_1.part  orin_floor_1.stl  orin_floor_2.part  orin_floor_2.stl  orin_lid.part  orin_lid.stl  up_plate.part  up_plate.stl  wheel.part  wheel.stl
puppet/puppet/: auto_mapping.py  controller.py  joint_states_publisher.py  odometry.py  robot_pose_in_map.py  scan_merger.py  scan_merger_simple.py
puppet/test/: test_copyright.py
puppet/urdf/: robot.urdf.xacro  robot_v2.urdf.xacro
train/: data_collector.py  puppet.py  run_training.sh  train.py  train_phase1.py
train/agents/: agent_ddpg.py  agent_ppo.py  sac_agent.py
train/models/: ddpg_agent_models.py  perception_models.py  ppo_agent_models.py  sac_agent_models.py
train/utils/: buffers.py  logger.py
