<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>puppet</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="dungx@todo.todo">dungx</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>

  <exec_depend>message_filters</exec_depend>
  <exec_depend>depthimage_to_laserscan</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
